update index and style file

--- a/index.html
+++ b/index.html
@@ -34,50 +34,50 @@
     />
   </head>
   <body>
-    <header class="page-header">
-      <div class="container header-container">
+    <header class="header">
+      <div class="container">
         <nav class="header-nav">
           <a
-            class="logo header-logo"
+            class="header-logo"
             href="./index.html"
-            >Web<span class="logo-part">Studio</span></a
+            >Web<span class="header-logo-accent">Studio</span></a
           >
-          <ul class="nav-list">
-            <li class="nav-item">
+          <ul class="header-menu-list">
+            <li class="header-menu-item">
               <a
-                class="nav-link"
+                class="header-menu-link"
                 href="./index.html"
                 >Studio</a
               >
             </li>
-            <li class="nav-item">
+            <li class="header-menu-item">
               <a
-                class="nav-link"
+                class="header-menu-link"
                 href=""
                 >Portfolio</a
               >
             </li>
-            <li class="nav-item">
+            <li class="header-menu-item">
               <a
-                class="nav-link"
+                class="header-menu-link"
                 href=""
                 >Contacts</a
               >
             </li>
           </ul>
         </nav>
-        <address class="contacts">
-          <ul class="contacts-list">
-            <li class="contacts-item">
+        <address class="header-address">
+          <ul class="header-address-list">
+            <li class="header-address-item">
               <a
-                class="contacts-link"
+                class="header-address-link"
                 href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="contacts-item">
+            <li class="header-address-item">
               <a
-                class="contacts-link"
+                class="header-address-link"
                 href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
@@ -86,48 +86,46 @@
         </address>
       </div>
     </header>
-    <!-- section 1 -->
     <main>
-      <section class="title-section">
+      <section class="hero">
         <div class="container">
-          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button
-            class="button-order"
+            class="hero-button"
             type="button"
           >
             Order Service
           </button>
         </div>
       </section>
-      <!-- section 2 -->
-      <section class="features-section">
+      <section class="features section">
         <div class="container">
-          <h2 class="visually-hidden">Features</h2>
+          <h2 class="visually-hidden">features</h2>
           <ul class="features-list">
-            <li class="feature-item">
-              <h3 class="feature-item-title subtitle">Strategy</h3>
-              <p class="feature-description text">
+            <li class="features-item">
+              <h3 class="features-subtitle subtitle">Strategy</h3>
+              <p class="features-text text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="feature-item">
-              <h3 class="feature-item-title subtitle">Punctuality</h3>
-              <p class="feature-description text">
+            <li class="features-item">
+              <h3 class="features-subtitle subtitle">Punctuality</h3>
+              <p class="features-text text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="feature-item">
-              <h3 class="feature-item-title subtitle">Diligence</h3>
-              <p class="feature-description text">
-                Research and confirm brands with the strongest digital growth
-                opportunities and minimize risk.
+            <li class="features-item">
+              <h3 class="features-subtitle subtitle">Diligence</h3>
+              <p class="features-text text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="feature-item">
-              <h3 class="feature-item-title subtitle">Technologies</h3>
-              <p class="feature-description text">
+            <li class="features-item">
+              <h3 class="features-subtitle subtitle">Technologies</h3>
+              <p class="features-text text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -135,12 +133,11 @@
           </ul>
         </div>
       </section>
-      <!-- section 3 -->
-      <section class="team-section">
+      <section class="team section">
         <div class="container">
-          <h2 class="team-section-title title">Our Team</h2>
+          <h2 class="team-title title">Our Team</h2>
           <ul class="team-list">
-            <li class="team-card">
+            <li class="team-item">
               <img
                 class="team-img"
                 src="./images/mark_guerrero.jpg"
@@ -149,11 +146,11 @@
                 alt="Mark Guerrero"
               />
               <div class="team-bottom">
-                <h3 class="team-member-name">Mark Guerrero</h3>
-                <p class="team-member-position text">Product Designer</p>
+                <h3 class="team-subtitle subtitle">Mark Guerrero</h3>
+                <p class="team-text text">Product Designer</p>
               </div>
             </li>
-            <li class="team-card">
+            <li class="team-item">
               <img
                 class="team-img"
                 src="./images/tom_ford.jpg"
@@ -162,11 +159,11 @@
                 alt="Tom Ford"
               />
               <div class="team-bottom">
-                <h3 class="team-member-name">Tom Ford</h3>
-                <p class="team-member-position text">Frontend Developer</p>
+                <h3 class="team-subtitle subtitle">Tom Ford</h3>
+                <p class="team-text text">Frontend Developer</p>
               </div>
             </li>
-            <li class="team-card">
+            <li class="team-item">
               <img
                 class="team-img"
                 src="./images/camila_garcia.jpg"
@@ -175,11 +172,11 @@
                 alt="Camila Garcia"
               />
               <div class="team-bottom">
-                <h3 class="team-member-name">Camila Garcia</h3>
-                <p class="team-member-position text">Marketing</p>
+                <h3 class="team-subtitle subtitle">Camila Garcia</h3>
+                <p class="team-text text">Marketing</p>
               </div>
             </li>
-            <li class="team-card">
+            <li class="team-item">
               <img
                 class="team-img"
                 src="./images/daniel_wilson.jpg"
@@ -188,108 +185,107 @@
                 alt="Daniel Wilson"
               />
               <div class="team-bottom">
-                <h3 class="team-member-name">Daniel Wilson</h3>
-                <p class="team-member-position text">UI Designer</p>
+                <h3 class="team-subtitle subtitle">Daniel Wilson</h3>
+                <p class="team-text text">UI Designer</p>
               </div>
             </li>
           </ul>
         </div>
       </section>
-      <!-- section 4 -->
-      <section class="portfolio-section">
+      <section class="portfolio section">
         <div class="container">
-          <h2 class="portfolio-section-title title">Our Portfolio</h2>
+          <h2 class="portfolio-title title">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li class="portfolio-card">
+            <li class="portfolio-item">
               <img
                 src="./images/banking_app.jpg"
                 width="360"
                 height="300"
-                alt="Banking-App"
+                alt="Banking App"
                 class="portfolio-img"
               />
               <div class="portfolio-bottom">
-                <h3 class="portfolio-card-title subtitle">Banking App</h3>
-                <p class="portfolio-card-description text">App</p>
+                <h3 class="portfolio-subtitle subtitle">Banking App</h3>
+                <p class="portfolio-text text">App</p>
               </div>
             </li>
-            <li class="portfolio-card">
+            <li class="portfolio-item">
               <img
                 src="./images/cashless_payment.jpg"
                 width="360"
                 height="300"
-                alt="Cashless-Payment"
+                alt="Cashless Payment"
                 class="portfolio-img"
               />
               <div class="portfolio-bottom">
-                <h3 class="portfolio-card-title subtitle">Cashless Payment</h3>
-                <p class="portfolio-card-description text">Marketing</p>
+                <h3 class="portfolio-subtitle subtitle">Cashless Payment</h3>
+                <p class="portfolio-text text">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-card">
+            <li class="portfolio-item">
               <img
                 src="./images/meditation_app.jpg"
                 width="360"
                 height="300"
-                alt="Meditation-App"
+                alt="Meditation App"
                 class="portfolio-img"
               />
               <div class="portfolio-bottom">
-                <h3 class="portfolio-card-title subtitle">Meditation App</h3>
-                <p class="portfolio-card-description text">App</p>
+                <h3 class="portfolio-subtitle subtitle">Meditation App</h3>
+                <p class="portfolio-text text">App</p>
               </div>
             </li>
-            <li class="portfolio-card">
+            <li class="portfolio-item">
               <img
                 src="./images/taxi_service.jpg"
                 width="360"
                 height="300"
-                alt="Taxi-Service"
+                alt="Taxi Service"
                 class="portfolio-img"
               />
               <div class="portfolio-bottom">
-                <h3 class="portfolio-card-title subtitle">Taxi Service</h3>
-                <p class="portfolio-card-description text">Marketing</p>
+                <h3 class="portfolio-subtitle subtitle">Taxi Service</h3>
+                <p class="portfolio-text text">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-card">
+            <li class="portfolio-item">
               <img
                 src="./images/screen_illustrations.jpg"
                 width="360"
                 height="300"
-                alt="Screen-Illustrations"
+                alt="Screen Illustrations"
                 class="portfolio-img"
               />
               <div class="portfolio-bottom">
-                <h3 class="portfolio-card-title subtitle">
+                <h3 class="portfolio-subtitle subtitle">
                   Screen Illustrations
                 </h3>
-                <p class="portfolio-card-description text">Design</p>
+                <p class="portfolio-text text">Design</p>
               </div>
             </li>
-            <li class="portfolio-card">
+            <li class="portfolio-item">
               <img
                 src="./images/online_courses.jpg"
                 width="360"
                 height="300"
-                alt="Online-Courses"
+                alt="Online Courses"
                 class="portfolio-img"
               />
               <div class="portfolio-bottom">
-                <h3 class="portfolio-card-title subtitle">Online Courses</h3>
-                <p class="portfolio-card-description text">Marketing</p>
+                <h3 class="portfolio-subtitle subtitle">Online Courses</h3>
+                <p class="portfolio-text text">Marketing</p>
               </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
-    <footer class="page-footer">
+    <footer class="footer">
       <div class="container">
         <a
-          class="logo footer-logo"
+          class="footer-logo"
           href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
+          >Web<span class="footer-logo-accent">Studio</span></a
         >
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
