update index and style file

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     />
   </head>
   <body>
+    <!-- header -->
     <header class="header">
       <div class="container">
         <nav class="header-nav">
@@ -87,6 +88,7 @@
       </div>
     </header>
     <main>
+      <!-- section-1 -->
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
@@ -98,6 +100,7 @@
           </button>
         </div>
       </section>
+      <!-- section-2 -->
       <section class="features section">
         <div class="container">
           <h2 class="visually-hidden">features</h2>
@@ -133,6 +136,7 @@
           </ul>
         </div>
       </section>
+      <!-- section-3 -->
       <section class="team section">
         <div class="container">
           <h2 class="team-title title">Our Team</h2>
@@ -192,6 +196,7 @@
           </ul>
         </div>
       </section>
+      <!-- section-4 -->
       <section class="portfolio section">
         <div class="container">
           <h2 class="portfolio-title title">Our Portfolio</h2>
@@ -280,6 +285,7 @@
         </div>
       </section>
     </main>
+    <!-- footer -->
     <footer class="footer">
       <div class="container">
         <a
