--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <ul class="header-menu-list">
             <li class="header-menu-item">
               <a
-                class="header-menu-link"
+                class="header-menu-link current"
                 href="./index.html"
                 >Studio</a
               >
