update css and images and index file

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
       </section>
       <!-- section-3 -->
-            <section class="team section">
+      <section class="team section">
         <div class="container">
           <h2 class="team-title title">Our Team</h2>
           <ul class="team-list">
@@ -191,32 +191,60 @@
 
                 <ul class="team-social-list">
                   <li class="team-social-item">
-                    <a href="" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a
+                      href=""
+                      class="team-social-link"
+                    >
+                      <svg
+                        class="team-social-icon"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
                   <li class="team-social-item">
-                    <a href="" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a
+                      href=""
+                      class="team-social-link"
+                    >
+                      <svg
+                        class="team-social-icon"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
                   <li class="team-social-item">
-                    <a href="" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a
+                      href=""
+                      class="team-social-link"
+                    >
+                      <svg
+                        class="team-social-icon"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
                   <li class="team-social-item">
-                    <a href="" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a
+                      href=""
+                      class="team-social-link"
+                    >
+                      <svg
+                        class="team-social-icon"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -237,29 +265,57 @@
                 <p class="team-text text">Frontend Developer</p>
                 <ul class="team-social-list">
                   <li class="team-social-item">
-                    <a href="" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a
+                      href=""
+                      class="team-social-link"
+                    >
+                      <svg
+                        class="team-social-icon"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a href="" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a
+                      href=""
+                      class="team-social-link"
+                    >
+                      <svg
+                        class="team-social-icon"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a href="" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a
+                      href=""
+                      class="team-social-link"
+                    >
+                      <svg
+                        class="team-social-icon"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a href="" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a
+                      href=""
+                      class="team-social-link"
+                    >
+                      <svg
+                        class="team-social-icon"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -280,29 +336,57 @@
                 <p class="team-text text">Marketing</p>
                 <ul class="team-social-list">
                   <li class="team-social-item">
-                    <a href="" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a
+                      href=""
+                      class="team-social-link"
+                    >
+                      <svg
+                        class="team-social-icon"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a href="" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a
+                      href=""
+                      class="team-social-link"
+                    >
+                      <svg
+                        class="team-social-icon"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a href="" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a
+                      href=""
+                      class="team-social-link"
+                    >
+                      <svg
+                        class="team-social-icon"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a href="" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a
+                      href=""
+                      class="team-social-link"
+                    >
+                      <svg
+                        class="team-social-icon"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -323,29 +407,57 @@
                 <p class="team-text text">UI Designer</p>
                 <ul class="team-social-list">
                   <li class="team-social-item">
-                    <a href="" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a
+                      href=""
+                      class="team-social-link"
+                    >
+                      <svg
+                        class="team-social-icon"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a href="" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a
+                      href=""
+                      class="team-social-link"
+                    >
+                      <svg
+                        class="team-social-icon"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a href="" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a
+                      href=""
+                      class="team-social-link"
+                    >
+                      <svg
+                        class="team-social-icon"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
-                    <a href="" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a
+                      href=""
+                      class="team-social-link"
+                    >
+                      <svg
+                        class="team-social-icon"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -355,6 +467,7 @@
             </li>
           </ul>
         </div>
+      </section>
       <!-- section-4 -->
       <section class="portfolio section">
         <div class="container">
