--- a/index.html
+++ b/index.html
@@ -474,65 +474,100 @@
           <h2 class="portfolio-title title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/banking_app.jpg"
-                width="360"
-                height="300"
-                alt="Banking App"
-                class="portfolio-img"
-              />
+              <div class="portfolio-wrap">
+                <img
+                  src="./images/banking_app.jpg"
+                  width="360"
+                  height="300"
+                  alt="Banking App"
+                  class="portfolio-img"
+                />
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-bottom">
                 <h3 class="portfolio-subtitle subtitle">Banking App</h3>
                 <p class="portfolio-text text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/cashless_payment.jpg"
-                width="360"
-                height="300"
-                alt="Cashless Payment"
-                class="portfolio-img"
-              />
+              <div class="portfolio-wrap">
+                <img
+                  src="./images/cashless_payment.jpg"
+                  width="360"
+                  height="300"
+                  alt="Cashless Payment"
+                  class="portfolio-img"
+                />
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-bottom">
                 <h3 class="portfolio-subtitle subtitle">Cashless Payment</h3>
                 <p class="portfolio-text text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/meditation_app.jpg"
-                width="360"
-                height="300"
-                alt="Meditation App"
-                class="portfolio-img"
-              />
+              <div class="portfolio-wrap">
+                <img
+                  src="./images/meditation_app.jpg"
+                  width="360"
+                  height="300"
+                  alt="Meditation App"
+                  class="portfolio-img"
+                />
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-bottom">
                 <h3 class="portfolio-subtitle subtitle">Meditation App</h3>
                 <p class="portfolio-text text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/taxi_service.jpg"
-                width="360"
-                height="300"
-                alt="Taxi Service"
-                class="portfolio-img"
-              />
+              <div class="portfolio-wrap">
+                <img
+                  src="./images/taxi_service.jpg"
+                  width="360"
+                  height="300"
+                  alt="Taxi Service"
+                  class="portfolio-img"
+                />
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-bottom">
                 <h3 class="portfolio-subtitle subtitle">Taxi Service</h3>
                 <p class="portfolio-text text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/screen_illustrations.jpg"
-                width="360"
-                height="300"
-                alt="Screen Illustrations"
-                class="portfolio-img"
-              />
+              <div class="portfolio-wrap">
+                <img
+                  src="./images/screen_illustrations.jpg"
+                  width="360"
+                  height="300"
+                  alt="Screen Illustrations"
+                  class="portfolio-img"
+                />
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-bottom">
                 <h3 class="portfolio-subtitle subtitle">
                   Screen Illustrations
@@ -541,13 +576,20 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/online_courses.jpg"
-                width="360"
-                height="300"
-                alt="Online Courses"
-                class="portfolio-img"
-              />
+              <div class="portfolio-wrap">
+                <img
+                  src="./images/online_courses.jpg"
+                  width="360"
+                  height="300"
+                  alt="Online Courses"
+                  class="portfolio-img"
+                />
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-bottom">
                 <h3 class="portfolio-subtitle subtitle">Online Courses</h3>
                 <p class="portfolio-text text">Marketing</p>
